<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>no.nav</groupId>
	<artifactId>bidrag-kodeverk</artifactId>
	<version>1.0.0</version>
	<properties>
		<java.version>21</java.version>
		<bidrag-felles.version>2026.05.22.134705-SB4</bidrag-felles.version>
		<kotlin.version>2.3.21</kotlin.version>
		<logback-encoder.version>9.0</logback-encoder.version>
		<springdoc-openapi-ui.version>3.0.3</springdoc-openapi-ui.version>
		<token-support.version>6.0.8</token-support.version>
		<kotest.version>6.0.5</kotest.version>
		<mockk.version>1.14.9</mockk.version>
		<kotlin-logging-jvm.version>8.0.03</kotlin-logging-jvm.version>
		<ktlint.version>1.8.0</ktlint.version>
		<wiremock-spring-boot.version>4.2.1</wiremock-spring-boot.version>
		<wiremock-standalone.version>3.13.2</wiremock-standalone.version>
	</properties>
	<repositories>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/navikt/*</url>
		</repository>
	</repositories>


	<dependencies>

		<!--Spring-->
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web-services</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.session</groupId>
			<artifactId>spring-session-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- swagger -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${springdoc-openapi-ui.version}</version>
		</dependency>

		<!--Sikkerhet-->
		<dependency>
			<groupId>no.nav.security</groupId>
			<artifactId>token-validation-spring</artifactId>
			<version>${token-support.version}</version>
		</dependency>
		<dependency>
			<groupId>no.nav.security</groupId>
			<artifactId>token-client-spring</artifactId>
			<version>${token-support.version}</version>
		</dependency>

		<!--NAV-->
		<dependency>
			<groupId>no.nav.bidrag</groupId>
			<artifactId>bidrag-commons-felles</artifactId>
			<version>${bidrag-felles.version}</version>
			<exclusions>
				<exclusion>
					<groupId>io.github.oshai</groupId>
					<artifactId>kotlin-logging-jvm</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>no.nav.bidrag</groupId>
			<artifactId>bidrag-commons-test-felles</artifactId>
			<version>${bidrag-felles.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>io.github.oshai</groupId>
					<artifactId>kotlin-logging-jvm</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>no.nav.bidrag</groupId>
			<artifactId>bidrag-transport-felles</artifactId>
			<version>${bidrag-felles.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jetty</artifactId>
		</dependency>

		<!--Diverse-->
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-stdlib-jdk8</artifactId>
			<version>${kotlin.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-reflect</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
		</dependency>

		<!--Logging-->
		<dependency>
			<groupId>io.github.oshai</groupId>
			<artifactId>kotlin-logging-jvm</artifactId>
			<version>${kotlin-logging-jvm.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
			<version>${logback-encoder.version}</version>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!--Test-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-test-junit5</artifactId>
			<version>${kotlin.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.kotest</groupId>
			<artifactId>kotest-assertions-core-jvm</artifactId>
			<version>${kotest.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.mockk</groupId>
			<artifactId>mockk-jvm</artifactId>
			<version>${mockk.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>no.nav.security</groupId>
			<artifactId>token-validation-spring-test</artifactId>
			<version>${token-support.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.wiremock.integrations</groupId>
			<artifactId>wiremock-spring-boot</artifactId>
			<version>${wiremock-spring-boot.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.wiremock</groupId>
			<artifactId>wiremock-standalone</artifactId>
			<version>${wiremock-standalone.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
        <finalName>app</finalName>
		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
		<testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${project.parent.version}</version>
			</plugin>
			<plugin>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-maven-plugin</artifactId>
				<version>${kotlin.version}</version>
				<executions>
					<execution>
						<id>compile</id>
						<phase>process-sources</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>test-compile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>test-compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<args>
						<arg>-Xjsr305=strict</arg>
					</args>
					<jvmTarget>${java.version}</jvmTarget>
					<compilerPlugins>
						<plugin>spring</plugin>
						<plugin>jpa</plugin>
					</compilerPlugins>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.jetbrains.kotlin</groupId>
						<artifactId>kotlin-maven-allopen</artifactId>
						<version>${kotlin.version}</version>
					</dependency>
					<dependency>
						<groupId>org.jetbrains.kotlin</groupId>
						<artifactId>kotlin-maven-noarg</artifactId>
						<version>${kotlin.version}</version>
					</dependency>
					<dependency>
						<groupId>org.jetbrains.kotlin</groupId>
						<artifactId>kotlin-maven-noarg</artifactId>
						<version>${kotlin.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>${maven-antrun-plugin.version}</version>
				<executions>
					<execution>
						<id>ktlint</id>
						<phase>verify</phase>
						<configuration>
							<target name="ktlint">
								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
									  classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
									<arg value="src/**/*.kt"/>
								</java>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
					<execution>
						<id>ktlint-format</id>
						<phase>validate</phase>
						<configuration>
							<target name="ktlint">
								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
									  classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
									<jvmarg value="--add-opens"/>
									<jvmarg value="java.base/java.lang=ALL-UNNAMED"/>
									<arg value="-F"/>
									<arg value="src/**/*.kt"/>
								</java>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>com.pinterest.ktlint</groupId>
						<artifactId>ktlint-cli</artifactId>
						<version>${ktlint.version}</version>
					</dependency>
					<!-- additional 3rd party ruleset(s) can be specified here -->
				</dependencies>
			</plugin>
		</plugins>
	</build>
</project>
